Bug 1841631 - Clamp minimum time durations to zero on Windows r=sfink

This seems to be failing on Windows only. The code to calculate MMU looks
correct and I don't see how it can result in something less than zero. We know
we can get non-monotonic timestamps sometimes, so let's try to work around this
on Windows.

The patch replaces everywhere in the statistics code where we calculate the
duration between two timestamps with a function that clamps the minimum to
zero, but only on Windows. Other platforms get an assert to make sure we don't
mess up.

Differential Revision: https://phabricator.services.mozilla.com/D183169